--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
+        "format": "prettier --write .",
+        "format:check": "prettier --check .",
         "docker-build:dev": "docker build -t modern-vite-react-app-dev -f Dockerfile.dev .",
         "docker-build:prod": "docker build -t modern-vite-react-app-prod -f Dockerfile.prod .",
         "docker-run:dev-win": "docker run -it --rm -p 3000:3000 --name modern-vite-react-app -d -v %cd%/src:/app/src:ro -v %cd%/public:/app/public:ro -v %cd%/index.html:/app/index.html:ro modern-vite-react-app-dev",
@@ -33,6 +35,7 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.3",
         "postcss": "^8.4.30",
+        "prettier": "^3.0.3",
         "tailwindcss": "^3.3.3",
         "typescript": "^5.0.2",
         "vite": "^4.4.5",
