--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "modern-vite-react-app",
+    "name": "create-modern-react-app",
     "private": true,
     "description": "Modern Vite React App",
     "version": "1.0.0",
@@ -12,11 +12,11 @@
         "preview": "vite preview",
         "format": "prettier --write .",
         "format:check": "prettier --check .",
-        "docker-build:dev": "docker build -t modern-vite-react-app-dev -f Dockerfile.dev .",
-        "docker-build:prod": "docker build -t modern-vite-react-app-prod -f Dockerfile.prod .",
-        "docker-run:dev-win": "docker run -it --rm -p 3000:3000 --name modern-vite-react-app -d -v %cd%/src:/app/src:ro -v %cd%/public:/app/public:ro -v %cd%/index.html:/app/index.html:ro modern-vite-react-app-dev",
-        "docker-run:dev-linux": "docker run -it --rm -p 3000:3000 --name modern-vite-react-app -d -v $(pwd)/src:/app/src:ro -v $(pwd)/public:/app/public:ro -v $(pwd)/index.html:/app/index.html:ro modern-vite-react-app-dev",
-        "docker-run:prod": "docker run -it --rm -p 8080:80 --name modern-vite-react-app -d modern-vite-react-app-prod"
+        "docker-build:dev": "docker build -t create-modern-react-app-dev -f Dockerfile.dev .",
+        "docker-build:prod": "docker build -t create-modern-react-app-prod -f Dockerfile.prod .",
+        "docker-run:dev-win": "docker run -it --rm -p 3000:3000 --name create-modern-react-app -d -v %cd%/src:/app/src:ro -v %cd%/public:/app/public:ro -v %cd%/index.html:/app/index.html:ro create-modern-react-app-dev",
+        "docker-run:dev-linux": "docker run -it --rm -p 3000:3000 --name create-modern-react-app -d -v $(pwd)/src:/app/src:ro -v $(pwd)/public:/app/public:ro -v $(pwd)/index.html:/app/index.html:ro create-modern-react-app-dev",
+        "docker-run:prod": "docker run -it --rm -p 8080:80 --name create-modern-react-app -d create-modern-react-app-prod"
     },
     "dependencies": {
         "@headlessui/react": "^1.7.17",
