README change and renamed

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "create-modern-react-app",
+    "name": "create-modern-react-pwa",
     "private": true,
-    "description": "Modern Vite React App",
+    "description": "Modern Vite React PWA",
     "version": "1.0.0",
     "type": "module",
     "license": "MIT",
@@ -12,11 +12,11 @@
         "preview": "vite preview",
         "format": "prettier --write .",
         "format:check": "prettier --check .",
-        "docker-build:dev": "docker build -t create-modern-react-app-dev -f Dockerfile.dev .",
-        "docker-build:prod": "docker build -t create-modern-react-app-prod -f Dockerfile.prod .",
-        "docker-run:dev-win": "docker run -it --rm -p 3000:3000 --name create-modern-react-app -d -v %cd%/src:/app/src:ro -v %cd%/public:/app/public:ro -v %cd%/index.html:/app/index.html:ro create-modern-react-app-dev",
-        "docker-run:dev-linux": "docker run -it --rm -p 3000:3000 --name create-modern-react-app -d -v $(pwd)/src:/app/src:ro -v $(pwd)/public:/app/public:ro -v $(pwd)/index.html:/app/index.html:ro create-modern-react-app-dev",
-        "docker-run:prod": "docker run -it --rm -p 8080:80 --name create-modern-react-app -d create-modern-react-app-prod"
+        "docker-build:dev": "docker build -t create-modern-react-pwa-dev -f Dockerfile.dev .",
+        "docker-build:prod": "docker build -t create-modern-react-pwa-prod -f Dockerfile.prod .",
+        "docker-run:dev-win": "docker run -it --rm -p 3000:3000 --name create-modern-react-pwa -d -v %cd%/src:/app/src:ro -v %cd%/public:/app/public:ro -v %cd%/index.html:/app/index.html:ro create-modern-react-pwa-dev",
+        "docker-run:dev-linux": "docker run -it --rm -p 3000:3000 --name create-modern-react-pwa -d -v $(pwd)/src:/app/src:ro -v $(pwd)/public:/app/public:ro -v $(pwd)/index.html:/app/index.html:ro create-modern-react-pwa-dev",
+        "docker-run:prod": "docker run -it --rm -p 8080:80 --name create-modern-react-pwa -d create-modern-react-pwa-prod"
     },
     "dependencies": {
         "@headlessui/react": "^1.7.17",
