--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,8 @@
     "printWidth": 185,
     "tabWidth": 4,
     "semi": true,
+    "jsxSingleQuote": true,
     "bracketSpacing": true,
-    "bracketSameLine": true
+    "bracketSameLine": true,
+    "plugins": ["prettier-plugin-tailwindcss"]
 }
